--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -4,24 +4,14 @@
     padding-bottom: 15vh;
     position: relative;
 }
-.main .nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 22px;
-    padding: 20px;
-    color: #585858;
-}
-.main .nav img{
-    width: 40px;
-    border-radius: 50px;
-}
+
+
 .main-container{
-    max-width: 900px;
+    
     margin: auto;
 }
 .main-container .greet{
-    margin: 50px 0px;
+    
     font-size: 56px;
     color:#c4c7c5;
     font-weight: 500px;
@@ -158,3 +148,31 @@ animation: loader 4s infinite linear;
     font-weight: 300px;
     line-height: 1.8;
 }
+
+.outline h2{
+   font-size: 27px;
+
+}
+
+.outline ul {
+    font-family: Outfit;
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    max-width: 1000px;
+    margin: 0;
+    width: 100%;
+
+  }
+  
+  li {
+  
+    padding: 5px 30px;
+    border-radius: 5px;
+
+    font-size: 16px; 
+    color: white; 
+  }
+  
+  
+  
