--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.loaded {
+  color: gray;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -221,10 +225,22 @@ iframe {
 }
 
 .heading2 {
-  font-size: 2.5em;
+  font-size: 2.1em;
+  margin-bottom: 0;
+  line-height: 1.4em;
+}
+.heading3{
+  font-size: 1.6em;
   margin-bottom: 0;
   line-height: 1.5em;
 }
+
+.heading4{
+  font-size: 1.1em;
+  margin-bottom: 0;
+  line-height: 1.2em;
+}
+
 
 .para {
   margin: 0 0 1em 0;
